<resources>
    <string name="app_name">projekt</string>

    <string name="zero">0</string>
    <string name="jeden">1</string>
    <string name="dwa">2</string>
    <string name="trzy">3</string>
    <string name="cztery">4</string>
    <string name="pięć">5</string>
    <string name="sześć">6</string>
    <string name="siedem">7</string>
    <string name="osiem">8</string>
    <string name="dziewięć">9</string>

    <string name="wyczyść">C</string>
    <string name="potęgowanie">^</string>
    <string name="nawiasy">( )</string>
    <string name="dzielenie">/</string>
    <string name="mnożenie">*</string>
    <string name="dodawanie">+</string>
    <string name="odejmnowanie">-</string>
    <string name="plusMinus">+/-</string>
    <string name="kropka">.</string>
    <string name="wynik">=</string>

    <string name="usuń"></string>

    <string name="pokaż">Wpisz wartość</string>
</resources>